--- a/src/main/resources/templates/student/studentList.html
+++ b/src/main/resources/templates/student/studentList.html
@@ -5,6 +5,14 @@
     <title>학생정보관리</title>
 </head>
 <body>
+    <form th:action="@{/students/inquiry}"
+            method="get">
+        대학<input type="text" name="univ">
+        이름<input type="text" name="name">
+        학점<input type="number" name="point" step="0.1">
+        <input type="submit" value="검색">
+    </form>
+
     <table>
         <tr><th>학생번호</th><th>학생이름</th><th>대학</th></tr>
         <tr th:each="student : ${students}">
